# math-objects

./: LICENSES-USED.md  README.md  about.peuf  about.yaml
cvnum/: README.md  VERSION.json  about.peuf  about.yaml  build_version_file.py  pyproject.toml  tool_02_update_version_nb.py  tool_03_src2prod.py  tool_update_version_nb.py
cvnum/changes/2013/: 10.txt  11.txt
cvnum/changes/2022/: 03.txt  06.txt  07.txt  08.txt
cvnum/changes/2023/: 07.txt
cvnum/contribute/api/: README.md
cvnum/contribute/doc/: README.md
cvnum/cvnum/: README.md  __init__.py
cvnum/cvnum/core/: __init__.py
cvnum/doc/: main.txt
cvnum/doc/content/: convert.txt  core.txt  intro.txt  tbox.txt  textify.txt
cvnum/doc/fr/: main.txt
cvnum/hooks/: How to execute unit tests before commit or push to git - Gems.html  README.md  pytest.sh
cvnum/hooks/How to execute unit tests before commit or push to git - Gems_fichiers/: css.css
cvnum/readme/: about.md  about.peuf  last.md  prologue.md
cvnum/src/: __init__.py
cvnum/src/config/: digit.py
cvnum/src/convert/: __init__.py  base2base.py  base2dec.py  base2int.py  dec2base.py  int2base.py  roman.py
cvnum/src/core/: var2int.py
cvnum/src/detextify/: automata.py
cvnum/src/tbox/: __init__.py  str2nb.py  var2nb.py
cvnum/src/textify/: __init__.py  automata-OLD.py  automata.py  integer.py  main-OLD.py  main.py
cvnum/tests/: HOW-TO--[coverage-pytest].txt  HOW-TO-coverage-pytest.txt  README.md  coverage-pytest-MEMO.txt  python - running pytest as a pre-commit hook __ no such file or directory issue - Stack Overflow.html
(+532 files in other folders)
